# ropacea

./: .gitignore  README.md  graph.ipynb  optimize.ipynb  pyproject.toml  setup.py
data/: market-return.xlsx  monthly-return-capitalization.csv  monthly-return-capitalization.xlsx  risk-free.csv  risk-free.xlsx
ropacea/: Single_factor.py  backtest.py  const_corr.py  data.py  financial_results_actual.py  portfolios.py  read_data.py  scs.py
