[project]
name = "ropacea"
version = "0.0.1"
dependencies = [
    'pandas',
    'openpyxl',
    'python-dateutil',
    'gurobipy==10.0.3',
    'numpy',
    'statsmodels',
    'yfinance',
    'jupyter',
    'plotly'
]
description = "Risk-Optimized Portfolios: An Analysis of Covariance Estimation Approaches"


[tool.setuptools]
packages = ["ropacea"]